
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int env ;
 int exit (int) ;
 int longjmp (int ,int) ;
 int puts (char*) ;
 scalar_t__ step ;

void fault() {
  if (step < 0) {

    longjmp(env, 1);
  } else {

    puts("\"/bin/sh\" not found, bad luck");
    exit(1);
  }
}
