; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/local/extr_19286.c_fault.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/local/extr_19286.c_fault.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@step = common dso_local global i64 0, align 8
@env = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [30 x i8] c"\22/bin/sh\22 not found, bad luck\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @fault() #0 {
  %1 = load i64, i64* @step, align 8
  %2 = icmp slt i64 %1, 0
  br i1 %2, label %3, label %6

3:                                                ; preds = %0
  %4 = load i32, i32* @env, align 4
  %5 = call i32 @longjmp(i32 %4, i32 1)
  br label %9

6:                                                ; preds = %0
  %7 = call i32 @puts(i8* getelementptr inbounds ([30 x i8], [30 x i8]* @.str, i64 0, i64 0))
  %8 = call i32 @exit(i32 1) #3
  unreachable

9:                                                ; preds = %3
  ret void
}

declare dso_local i32 @longjmp(i32, i32) #1

declare dso_local i32 @puts(i8*) #1

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
